<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/parent_layout_login"
    android:inputType="text"
    android:layout_height="match_parent">

    <com.myapp.demo.views.MyAppTextViewBold
     android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/title_login"
        android:layout_marginBottom="30dp"
        android:textSize="40sp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:paddingTop="10dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:background="@color/colorLightGreen"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/image_log_login" />
    <com.myapp.demo.views.MyAppEditText
        android:layout_below="@+id/image_log_login"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColorHint="@color/colorAlertBackground"
        android:textColor="@color/colorPrimaryDark"
        android:maxLines="1"
        android:textSize="14sp"
        android:id="@+id/et_user_name"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:gravity="center_horizontal"
        android:hint="@string/hint_username"
        android:background="@drawable/drawable_rounded_transparent_background" />
    <com.myapp.demo.views.MyAppEditText
        android:layout_below="@+id/et_user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="14sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColorHint="@color/colorAlertBackground"
        android:textColor="@color/colorPrimaryDark"
        android:maxLines="1"
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:gravity="center"
        android:hint="@string/hint_password"
        android:background="@drawable/drawable_rounded_transparent_background" />
    <com.myapp.demo.views.MyAppButton
        android:layout_below="@+id/et_password"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColorHint="@color/colorAccent"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:textColor="@color/colorWhite"
        android:id="@+id/btn_login"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:text="@string/title_login"
        android:background="@drawable/drawable_background_button_login" />

</RelativeLayout>