<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_edit_profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.myapp.demo.views.MyAppImageView
            android:layout_marginTop="20dp"
            android:layout_width="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/drawable_background_profile_image"
            android:layout_height="150dp"
            android:id="@+id/image_user_profile_pic" />

        <com.myapp.demo.views.MyAppImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/drawable_background_camera_ic"
            android:layout_alignBottom="@+id/image_user_profile_pic"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="104dp"
            android:layout_marginEnd="104dp"
            android:layout_marginBottom="18dp"
            android:id="@+id/image_open_camera" />

        <com.myapp.demo.views.MyAppTextViewBold
            android:layout_below="@+id/image_open_camera"
            android:layout_marginTop="16dp"
            android:id="@+id/tv_user_name"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:textColorHint="@color/colorAlertBackground"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:id="@+id/view1"
            android:layout_below="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:background="@color/colorAlertBackground"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_height="5dp" />
        <com.myapp.demo.views.MyAppImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_email"
            android:layout_below="@+id/view1"
            android:id="@+id/image_email_ic" />
        <com.myapp.demo.views.MyAppTextView
            android:layout_toRightOf="@+id/image_email_ic"
            android:layout_toEndOf="@+id/image_email_ic"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/tv_user_email"
            android:textColorHint="@color/colorAlertBackground"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:layout_below="@+id/view1"
            android:layout_height="wrap_content" />
        <View
            android:id="@+id/view2"
            android:layout_below="@+id/tv_user_email"
            android:layout_width="match_parent"
            android:background="@color/colorAlertBackground"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_height="5dp" />
        <com.myapp.demo.views.MyAppImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_blood_group"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@+id/view2"
            android:id="@+id/image_blood_group_ic" />
        <com.myapp.demo.views.MyAppTextViewBold
            android:layout_width="match_parent"
            android:layout_below="@+id/view2"
            android:drawablePadding="16dp"
            android:padding="10dp"
            android:drawableRight="@drawable/ic_arrow_drop_down"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@+id/image_blood_group_ic"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/image_blood_group_ic"
            android:background="@drawable/drawable_corner_less_rounded_transparent_background"
            android:id="@+id/tv_blood_group"
            android:hint="@string/hint_blood_group"
            android:textColorHint="@color/colorAlertBackground"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content" />
        <com.myapp.demo.views.MyAppImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_birthday"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@+id/image_blood_group_ic"
            android:id="@+id/image_birthday_ic" />

        <com.myapp.demo.views.MyAppTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:layout_below="@+id/tv_blood_group"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:enabled="false"
            android:alpha="0.1"
            android:drawableRight="@drawable/ic_arrow_drop_down"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@+id/tv_day_of_birth"
            android:layout_toRightOf="@+id/tv_day_of_birth"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/drawable_corner_less_rounded_transparent_background"
            android:hint="@string/hint_acronym_month_of_birth"
            android:id="@+id/tv_month_of_birth"
            android:textColorHint="@color/colorAlertBackground"
            android:textColor="@color/colorPrimaryDark"
            />
        <com.myapp.demo.views.MyAppTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:layout_below="@+id/tv_blood_group"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:drawableRight="@drawable/ic_arrow_drop_down"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@+id/tv_month_of_birth"
            android:layout_toRightOf="@+id/tv_month_of_birth"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/drawable_corner_less_rounded_transparent_background"
            android:hint="@string/hint_acronym_year_of_birth"
            android:id="@+id/tv_year_of_birth"
            android:textColorHint="@color/colorAlertBackground"
            android:textColor="@color/colorPrimaryDark"
            />
        <com.myapp.demo.views.MyAppTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:alpha="0.1"
            android:padding="10dp"
            android:drawablePadding="5dp"
            android:textSize="16sp"
            android:drawableRight="@drawable/ic_arrow_drop_down"
            android:drawableEnd="@drawable/ic_arrow_drop_down"
            android:gravity="center_vertical"
            android:background="@drawable/drawable_corner_less_rounded_transparent_background"
            android:hint="@string/hint_acronym_day_of_birth"
            android:enabled="false"
            android:id="@+id/tv_day_of_birth"
            android:textColorHint="@color/colorAlertBackground"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignTop="@+id/tv_month_of_birth"
            android:layout_alignLeft="@+id/tv_blood_group"
            android:layout_alignStart="@+id/tv_blood_group" />
        <com.myapp.demo.views.MyAppEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_birthday_ic"
            android:inputType="number"
            android:paddingTop="10dp"
            android:maxLength="10"
            android:maxLines="1"
            android:background="@null"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:drawableLeft="@drawable/vector_drawable_ic_smartphone"
            android:drawableStart="@drawable/vector_drawable_ic_smartphone"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_vertical"
            android:hint="@string/hint_contact_no"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:id="@+id/et_contact_number"
            android:textColorHint="@color/colorAlertBackground"
            android:textColor="@color/colorPrimaryDark"
            />
        <View
            android:id="@+id/view3"
            android:layout_below="@+id/et_contact_number"
            android:layout_width="match_parent"
            android:background="@color/colorAlertBackground"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_height="5dp" />
        <com.myapp.demo.views.MyAppEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view3"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:inputType="textPassword"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            android:drawableLeft="@drawable/vector_drawable_ic_lock_outline"
            android:drawableStart="@drawable/vector_drawable_ic_lock_outline"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_vertical"
            android:background="@null"
            android:hint="@string/hint_enter_password"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:id="@+id/et_enter_password"
            android:textColorHint="@color/colorAlertBackground"
            android:textColor="@color/colorPrimaryDark"
            />
        <View
            android:id="@+id/view4"
            android:layout_below="@+id/et_enter_password"
            android:layout_width="match_parent"
            android:background="@color/colorAlertBackground"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_height="5dp" />
        <com.myapp.demo.views.MyAppEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view4"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            android:drawableLeft="@drawable/vector_drawable_ic_lock_outline"
            android:drawableStart="@drawable/vector_drawable_ic_lock_outline"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@null"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:hint="@string/hint_re_enter_password"
            android:textColorHint="@color/colorAlertBackground"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:id="@+id/et_re_enter_password"
            />
        <View
            android:id="@+id/view5"
            android:layout_below="@+id/et_re_enter_password"
            android:layout_width="match_parent"
            android:background="@color/colorAlertBackground"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_height="5dp"
            />
        <com.myapp.demo.views.MyAppButton
            android:layout_width="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view5"
            android:id="@+id/btn_save"
            android:textColor="@color/colorWhite"
            android:text="@string/text_save"
            android:background="@drawable/drawable_background_button_login"/>
        <com.myapp.demo.views.MyAppButton
            android:layout_width="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_save"
            android:id="@+id/btn_logout"
            android:textColor="@color/colorWhite"
            android:text="@string/text_logout"
            android:background="@drawable/drawable_background_button_login"/>

    </RelativeLayout>
</ScrollView>